--- a/2023-07-CMS-July-Connectathon/PFEObservation/Observation-P0723-BSJ-HHA-OASIS-Appetite-02RN.json
+++ b/2023-07-CMS-July-Connectathon/PFEObservation/Observation-P0723-BSJ-HHA-OASIS-Appetite-02RN.json
@@ -19,6 +19,15 @@
     {
       "coding": [
         {
+          "system": "http://hl7.org/fhir/us/pacio-pfe/CodeSystem/pfe-category-cs",
+          "code": "mental_functions",
+          "display": "Mental functions"
+        }
+      ]
+    },
+    {
+      "coding": [
+        {
           "code": "survey",
           "system": "http://terminology.hl7.org/CodeSystem/observation-category"
         }
