Added missing resources and fixed data
Signed-off-by: Vanessa Fotso <vfotso@mitre.org>

--- a/2024-07 CMS July Connectathon/Condition/Condition-BSJ-KidneyDisease.json
+++ b/2024-07 CMS July Connectathon/Condition/Condition-BSJ-KidneyDisease.json
@@ -68,7 +68,7 @@
   "extension": [
     {
       "url": "http://hl7.org/fhir/StructureDefinition/condition-assertedDate",
-      "valueDateTime": "2021-4"
+      "valueDateTime": "2021-04-10"
     }
   ],
   "recordedDate": "2021-04-10T15:00:00-04:00",
